--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,10 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Inicio" description="GuitarLa pagina de venta de guitarras, blog , cursos y mucho màs.">
-	<main>
-		primera pagina en astro
+	<main class="contenedor">
+		<h1 class="heading">
+			Inicio
+		</h1>
 	</main>
 </Layout>
 
