--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 interface Props {
   title: string;
   description: string;
@@ -22,6 +23,7 @@ const { title, description } = Astro.props;
   <body>
 	<Header/>
     <slot />
+	<Footer/
   </body>
 </html>
 <style is:global>
