Class 291. Mostrando el Resto de la información de la API

--- a/src/pages/tienda.astro
+++ b/src/pages/tienda.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Guitarra from "../components/Guitarra.astro"
 
 const url = `${import.meta.env.PUBLIC_API_URL}/guitarras?populate=imagen`;
 const respuesta = await fetch(url);
 const {data} = await respuesta.json();
-
-console.log(data);
 
 ---
 
@@ -16,7 +15,13 @@ console.log(data);
 		</h1>
 		<div class="grid">
 			{data?.map(guitarra => (
-				<div>{guitarra.attributes.nombre}</div>
+				<Guitarra 
+					nombre={guitarra?.attributes?.nombre}
+					descripcion={guitarra?.attributes?.descripcion}
+					url={guitarra?.attributes?.url}
+					precio={guitarra?.attributes?.precio}
+					imagen={guitarra?.attributes?.imagen?.data?.attributes?.formats?.medium?.url}
+				/>
 			))}
 		</div>
 	</main>
