--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Post from "../components/Post.astro"
+const url = `${import.meta.env.PUBLIC_API_URL}/posts?populate=imagen`;
+const respuesta = await fetch(url);
+const {data} = await respuesta.json();
+
+console.log(data);
 
 ---
 
@@ -8,6 +14,18 @@ import Layout from '../layouts/Layout.astro';
 		<h1 class="heading">
 			Blog
 		</h1>
+
+		<div class="grid">
+			{data?.map(blog=>(
+				<Post 
+					titulo={blog?.attributes?.titulo}
+					contenido={blog?.attributes?.contenido}
+					publishedAt={blog?.attributes?.publishedAt}
+					imagen={blog?.attributes?.imagen?.data?.attributes?.formats?.medium?.url}
+					url={blog?.attributes?.url}
+				/>
+			))}
+		</div>
 	</main>
 </Layout>
 
